tools/tests/errors/surf_lib_22.ki
# serialize.loads of text that is not a valid graph dump must throw.
var s = import("serialize")
discard s.loads("this is not a valid graph dump @@@")
